Fix : Contact pages Font

--- a/FrontEnd/contact.html
+++ b/FrontEnd/contact.html
@@ -35,6 +35,7 @@
 
         .left h1 {
             font-size: 36px;
+            color: whitesmoke;
         }
 
         .left h1 span {
@@ -48,6 +49,7 @@
             display: flex;
             flex-direction: column;
             gap: 20px;
+            color: white;
         }
 
         .contact-boxes {
@@ -59,7 +61,7 @@
         .contact-box {
             display: flex;
             align-items: center;
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(249, 246, 246, 0.1);
             padding: 10px 15px;
             border-radius: 8px;
             width: 48%;
@@ -73,13 +75,15 @@
             padding: 20px;
             background: rgba(255, 255, 255, 0.1);
             border-radius: 8px;
+            color: whitesmoke;
         }
 
         .right {
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(255, 255, 255, 0.138);
             padding: 30px;
             border-radius: 10px;
             width: 40%;
+
         }
 
         .right h2 {
@@ -105,8 +109,11 @@
             background: transparent;
             border: 1px solid #ddd;
             color: white;
+           
         }
-
+        ::placeholder{
+            color: rgb(67, 63, 63);
+        }
         .right textarea {
             height: 100px;
         }
