--- a/FrontEnd/loginpage.html
+++ b/FrontEnd/loginpage.html
@@ -7,6 +7,18 @@
   <title>Login Page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css" />
+
+  <style>
+    /* Change placeholder color */
+    input::placeholder {
+      color: rgba(255, 255, 255, 0.7); /* Light white color */
+    }
+
+    /* Adjust spacing between form and nav */
+    main {
+      margin-top: 20px; /* Added some space */
+    }
+  </style>
 </head>
 
 <body>
@@ -17,6 +29,7 @@
       </a>
     </nav>
   </header>
+
   <main class="d-flex justify-content-center align-items-center" style="height: 100vh;">
     <div class="container d-flex justify-content-between align-items-center w-75">
       <!-- Left Section -->
@@ -24,7 +37,7 @@
         <p style="font-family: 'Courier New', Courier, monospace;">""Make your Code Conversion easier with just one Click"</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/PkZNo7MFNFg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-  
+
       <!-- Right Section (Login Form + Google Sign-in) -->
       <div class="d-flex flex-column align-items-center">
         <div class="form-container text-center" style="background: transparent;">
@@ -32,14 +45,16 @@
           <p style="color: white;"><b>Sign in to Code Conversion</b></p>
           <form>
             <label for="email" style="color: white;">Email</label>
-            <input type="email" name="email" id="email" placeholder="Enter your email" required style="color: white; background-color: transparent; padding: 10px; border: 1px solid #ccc; border-radius: 5px; width: 100%;" />
-  
+            <input type="email" name="email" id="email" placeholder="Enter your email" required 
+              style="color: white; background-color: transparent; padding: 10px; border: 1px solid #ccc; border-radius: 5px; width: 100%;" />
+
             <label for="password" style="color: white;">Password</label>
-            <input type="password" name="password" id="password" placeholder="Enter your password" required style="color: white; background-color: transparent; padding: 10px; border: 1px solid #ccc; border-radius: 5px; width: 100%;" />
-  
+            <input type="password" name="password" id="password" placeholder="Enter your password" required 
+              style="color: white; background-color: transparent; padding: 10px; border: 1px solid #ccc; border-radius: 5px; width: 100%;" />
+
             <button type="submit" class="btn-sign" style="width: 100px; margin-bottom: 1rem; margin-top: 1rem;">Sign In</button>
           </form>
-  
+
           <!-- Links -->
           <div class="mt-3" style="text-align: left;">
             <a href="./forgotpassword.html" style="color: white;">Forgot Password?</a>
@@ -49,7 +64,7 @@
           </div>
         </div>
         <hr style="color: white;">
-        <!-- ✅ Google Sign-in button aligned properly -->
+        <!-- Google Sign-in button -->
         <div class="mt-3">
           <button class="google-btn" style="background-color: #fff; color: #000; border: 1px solid #ccc; padding: 10px 20px; border-radius: 5px; cursor: pointer;">
             <img src="Assets/Icons/icons8-google-20.png" alt="Google Icon" style="width: 20px; margin-right: 8px;"> 
@@ -59,7 +74,6 @@
       </div>
     </div>
   </main>
-  
 
   <footer class="footer fixed-bottom">
     <div class="container-fluid">
