Fix : Background Style in Signup form container

--- a/FrontEnd/signuppage.html
+++ b/FrontEnd/signuppage.html
@@ -39,7 +39,7 @@
   
       <!-- Right Section (Signup Form + Google Sign-in) -->
       <div class="d-flex flex-column align-items-center">
-        <div class="form-container text-center p-4 rounded" style="background: rgba(255, 255, 255, 0.1);">
+        <div class="form-container text-center p-4 rounded" style="background: transparent;">
 
           <h1 style="color: white;">Create Your Account</h1>
           <p style="color: white;"><b>Sign up to Code Conversion</b></p>
