--- a/FrontEnd/price.html
+++ b/FrontEnd/price.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subscription Plans</title>
     <link rel="icon" href="Assets/Icons/icons8-registry-editor-96.png" type="image/x-icon">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <style>
         main {
@@ -68,19 +67,19 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="opacity: 0.5;">
-            <div class="logo"></div>
             <a class="navbar-brand" href="Home.html">
                 <img src="Assets/images/Logo.svg" alt="Logo">
             </a>
             <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active text-white" aria-current="page" href="Home.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="price.html">Pricing</a>
@@ -96,12 +95,12 @@
                         </li>
                     </ul>
                 </div>
-                <div class="dropdown dropleft">
+                <div class="dropdown">
                     <button class="btn btn-primary bg-transparent border-0" type="button" id="dropdownMenuButton"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <img src="Assets/Icons/menu.svg" alt="Menu">
                     </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <div class="dropdown-menu dropdown-menu-custom" aria-labelledby="dropdownMenuButton">
                         <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
                             Progress <img src="Assets/Icons/caret-fill.svg" alt="Caret">
                         </a>
@@ -203,9 +202,24 @@
             <img src="Assets/Icons/sidebar.svg" alt="Close" id="closeIcon" style="display: none;">
         </button>
     </main>
+    <footer class="footer fixed-bottom">
+        <div class="container-fluid">
+            <div class="d-flex justify-content-end py-3">
+                <ul class="list-inline mb-0">
+                    <li class="list-inline-item"><img src="Assets/Icons/icons8-instagram.svg" alt="Instagram"></li>
+                    <li class="list-inline-item"><img src="Assets/Icons/x.svg" alt="X"></li>
+                    <li class="list-inline-item"><img src="Assets/Icons/git.svg" alt="GitHub"></li>
+                    <li class="list-inline-item"><a class="text-white" href="#">Terms of Service</a></li>
+                    <li class="list-inline-item"><a class="text-white" href="#">Privacy Policy</a></li>
+                    <li class="list-inline-item"><a class="text-white" href="#">Code Conversion</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+     <!-- Bootstrap 5 JS and dependencies -->
+     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <script>
         document.getElementById('sidebarToggle').addEventListener('click', function () {
             const sidebar = document.getElementById('sidebar');
@@ -233,46 +247,6 @@
         // Ensure the close icon is hidden initially
         document.getElementById('closeIcon').style.display = 'none';
     </script>
-    <script>
-        // Fetch and include settings modal
-        fetch("settings.html")
-            .then(response => response.text())
-            .then(data => {
-                document.body.insertAdjacentHTML("beforeend", data);
-            });
-    </script>
-    <!-- Settings Modal -->
-    <script>
-        function showTab(event, tab) {
-            event.preventDefault();
-            const content = {
-                general: "<h6>Chat</h6><p>Show tokens usage in chat</p>",
-                profile: "<h6>Details</h6><p>Email</p><p>Phone</p>",
-                tokens: "<h6>Usage</h6><p>Available Token</p><p>Total Tokens</p>",
-                editor: "<h6>Edit</h6><p>Line warpping</p>",
-                sessions: "<h6>Active Logins</h6><p>location : chennai </p><p>Time : 2:29pm</p><p>Device : Chrome(windows)</p>"
-            };
-            document.getElementById("settingsContent").innerHTML = content[tab];
-
-            // Remove 'active' class from all nav links
-            document.querySelectorAll(".nav-link").forEach(link => link.classList.remove("active"));
-            event.target.classList.add("active");
-        }
-    </script>
-    <footer class="footer fixed-bottom">
-        <div class="container-fluid">
-            <div class="d-flex justify-content-end py-3">
-                <ul class="list-inline mb-0">
-                    <li class="list-inline-item"><img src="Assets/Icons/icons8-instagram.svg" alt="Instagram"></li>
-                    <li class="list-inline-item"><img src="Assets/Icons/x.svg" alt="X"></li>
-                    <li class="list-inline-item"><img src="Assets/Icons/git.svg" alt="GitHub"></li>
-                    <li class="list-inline-item"><a class="text-white" href="#">Terms of Service</a></li>
-                    <li class="list-inline-item"><a class="text-white" href="#">Privacy Policy</a></li>
-                    <li class="list-inline-item"><a class="text-white" href="#">Code Conversion</a></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
 </body>
 
 </html>
